--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -914,9 +914,16 @@ MLINKS+=sysctl.9 SYSCTL_DECL.9 \
 	sysctl.9 SYSCTL_OPAQUE.9 \
 	sysctl.9 SYSCTL_PROC.9 \
 	sysctl.9 SYSCTL_QUAD.9 \
+	sysctl.9 SYSCTL_S8.9 \
+	sysctl.9 SYSCTL_S16.9 \
+	sysctl.9 SYSCTL_S32.9 \
+	sysctl.9 SYSCTL_S64.9 \
 	sysctl.9 SYSCTL_STRING.9 \
 	sysctl.9 SYSCTL_STRUCT.9 \
+	sysctl.9 SYSCTL_U8.9 \
+	sysctl.9 SYSCTL_U16.9 \
 	sysctl.9 SYSCTL_U32.9 \
+	sysctl.9 SYSCTL_U64.9 \
 	sysctl.9 SYSCTL_UINT.9 \
 	sysctl.9 SYSCTL_ULONG.9 \
 	sysctl.9 SYSCTL_UQUAD.9
@@ -927,9 +934,16 @@ MLINKS+=sysctl_add_oid.9 SYSCTL_ADD_INT.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_OPAQUE.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_PROC.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_QUAD.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_S8.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_S16.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_S32.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_S64.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_STRING.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_STRUCT.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_U8.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_U16.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_U32.9 \
+	sysctl_add_oid.9 SYSCTL_ADD_U64.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_UINT.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_ULONG.9 \
 	sysctl_add_oid.9 SYSCTL_ADD_UQUAD.9 \
