--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3442,6 +3442,7 @@ TO_REMOVE+=/usr/share/man/man4/rp.4.gz
 TO_REMOVE+=/usr/share/man/man4/si.4.gz
 TO_REMOVE+=/usr/share/man/man8/sicontrol.8.gz
 TO_REMOVE+=/usr/include/sys/clist.h
+TO_REMOVE+=/usr/share/man/man2/sigstack.2.gz
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
