openresolv: Bind to system as resolvconf(8)
The resolvconf(8) will be used by dhcpcd(8), which will be imported
later to provide out-of-box IPv6 DHCP support, replacing the IPv4-only
dhclient(8) in base and the rtsold(8).

Thanks to swildner for reviewing and providing suggestions.

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -16,7 +16,8 @@ BINUPDATE= devd.conf fbtab gettytab network.subr \
 BINUPDATE+=mail.rc locate.rc
 .else
 BINUPDATE+=${.CURDIR}/../usr.bin/mail/misc/mail.rc \
-	${.CURDIR}/../usr.bin/locate/locate/locate.rc
+	${.CURDIR}/../usr.bin/locate/locate/locate.rc \
+	${.CURDIR}/../contrib/openresolv/resolvconf.conf
 .endif
 
 # Initial distribution files are installed read-write (644)
