--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -132,6 +132,8 @@
         ..
         custom
         ..
+        dhcpcd-hooks
+        ..
         gcc47
         ..
         gcc50
@@ -191,6 +193,10 @@
             ..
             cvs
                 contrib
+                ..
+            ..
+            dhcpcd
+                hooks
                 ..
             ..
             diskless
