dhcpcd: Add rc script rc.d/dhcpcd
The dhcpcd supports both DHCPv4 and DHCPv6.

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -56,6 +56,9 @@ devfs_config_files="/etc/defaults/devfs.conf /etc/devfs.conf"
 #
 hostname=""			# Set this!
 nisdomainname="NO"		# Set to NIS domain if using NIS (or NO).
+dhcpcd_enable="NO"		# Set to YES to run dhcpcd in master mode.
+dhcpcd_program="/sbin/dhcpcd"
+dhcpcd_flags=""
 dhclient_program="/sbin/dhclient"	# Path to dhcp client program.
 dhclient_flags="-w"		# Additional flags to pass to dhcp client.
 firewall_enable="NO"		# Set to YES to enable firewall functionality
