--- a/etc/devd.conf
+++ b/etc/devd.conf
@@ -22,6 +22,9 @@ options {
 		"(aac|adv|adw|amd|amr|asr|bt|ciss|dpt|\
 		ida|iir|ips|isp|mlx|mly|mpr|mps|mpt|ncr|sym|trm)\
 		[0-9]+";
+	set wifi-driver-regex
+		"(ath|bwi|bwn|ipw|iwi|iwn|malo|mwl|ral|rsu|rum|run|uath|upgt|\
+		ural|urtw|urtwn|wi|wpi|wtap|zyd)[0-9]+";
 };
 
 # Note that the attach/detach with the highest value wins, so that one can
@@ -57,17 +60,16 @@ options {
 #};
 
 #
-# Like Ethernet devices, but separate because
-# they have a different media type.  We may want
-# to exploit this later.
+# Like Ethernet devices, but separate because 802.11 requires spawning
+# wlan(4) interface.
 #
-#detach 0 {
-#	media-type "802.11";
-#	action "/etc/pccard_ether $device-name stop";
-#};
 #attach 0 {
-#	media-type "802.11";
-#	action "/etc/pccard_ether $device-name start";
+#	device-name "$wifi-driver-regex";
+#	action "/etc/pccard_ether $device-name startchildren";
+#};
+#detach 0 {
+#	device-name "$wifi-driver-regex";
+#	action "/etc/pccard_ether $device-name stopchildren";
 #};
 #notify 0 {
 #	match "system"		"IFNET";
