rc.d: Introduce 'dhcp_client' to wrap over dhclient and dhcpcd
The new 'dhcp_client' rc script is a wrapper to start either dhclient(8)
or dhcpcd(8) based on the value of the 'dhcp_client' rc variable.

Other rc scripts are updated to depend on this wrapper instead of the
explicit 'dhclient'.  This eases the migration from dhclient(8) to
dhcpcd(8) later.

Update rc.conf.5 and dhcp.8 man pages accordingly.

Meanwhile, remove the two obsolete variables 'dhcp_{program,flags}' from
/etc/rc.subr.

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -33,7 +33,7 @@ sensorsd_flags=""	# additional flags for sensorsd(8).
 hotplugd_enable="NO"	# Run hotplugd to monitor devices hot plugging.
 hotplugd_flags=""	# additional flags for hotplugd(8)
 pccard_ifconfig="NO"	# Specialized pccard ethernet configuration (or NO).
-pccard_ether_delay="5"	# Delay before trying to start dhclient in pccard_ether
+pccard_ether_delay="5"	# Delay before trying to start DHCP client in pccard_ether
 removable_interfaces=""	# Removable network interfaces for /etc/pccard_ether.
 local_startup="/usr/local/etc/rc.d /usr/pkg/etc/rc.d"
 			# startup script dirs.
@@ -56,6 +56,8 @@ devfs_config_files="/etc/defaults/devfs.conf /etc/devfs.conf"
 #
 hostname=""			# Set this!
 nisdomainname="NO"		# Set to NIS domain if using NIS (or NO).
+dhcp_client="dhclient"		# Name of the rc script that is called to start
+				# the DHCP client, e.g., "dhcpcd" or "dhclient"
 dhcpcd_enable="NO"		# Set to YES to run dhcpcd in master mode.
 dhcpcd_program="/sbin/dhcpcd"
 dhcpcd_flags=""
