--- a/etc/devd.conf
+++ b/etc/devd.conf
@@ -47,16 +47,16 @@ options {
 #};
 
 #
-# Try to start dhclient on Ethernet-like interfaces when the link comes
+# Try to start DHCP client on Ethernet-like interfaces when the link comes
 # up.  Only devices that are configured to support DHCP will actually
-# run it.  No link down rule exists because dhclient automatically exits
+# run it.  No link down rule exists because DHCP client automatically exits
 # when the link goes down.
 #
 #notify 0 {
 #	match "system"		"IFNET";
 #	match "type"		"LINK_UP";
 #	media-type		"ethernet";
-#	action "/etc/rc.d/dhclient quietstart $subsystem";
+#	action "/etc/rc.d/dhcp_client quietstart $subsystem";
 #};
 
 #
@@ -75,7 +75,7 @@ options {
 #	match "system"		"IFNET";
 #	match "type"		"LINK_UP";
 #	media-type		"802.11";
-#	action "/etc/rc.d/dhclient quietstart $subsystem";
+#	action "/etc/rc.d/dhcp_client quietstart $subsystem";
 #};
 
 # An entry like this might be in a different file, but is included here
