build - Fix buildworld from DFly releases prior to 5.0.
* Fix mkmagic to not use the magic.h in /usr/include.  It
  needs the magic.h generated via libmagic.  Since mkmagic
  must be built prior to libmagic, we generate a local magic.h
  just for mkmagic.

* Fixes buildworld from DFly releases prior to 5.0.

--- a/lib/libmagic/mkmagic/Makefile
+++ b/lib/libmagic/mkmagic/Makefile
@@ -2,13 +2,16 @@ CONTRIBDIR=	${.CURDIR}/../../../contrib/file/src
 .PATH:	${CONTRIBDIR}
 
 PROG=	mkmagic
-SRCS=	apprentice.c encoding.c cdf_time.c funcs.c magic.c print.c
+INCS=	magic.h
+SRCS=	apprentice.c encoding.c cdf_time.c funcs.c magic.c print.c ${INCS}
 
 MAGICSHAREDIR=${SHAREDIR}/misc
 MAGIC=	${MAGICSHAREDIR}/magic
 
 CFLAGS+=	-DHAVE_CONFIG_H -DCOMPILE_ONLY -DMAGIC=\"${MAGIC}\"
 CFLAGS+=	-I${.CURDIR}/../libmagic
+
+VER!=  grep -w VERSION ${.CURDIR}/../libmagic/config.h | awk -F\" '{print $$2}'
 
 # XXX -Wunused-function in apprentice.c
 WARNS= 1
@@ -17,5 +20,10 @@ build-tools: mkmagic.nx
 
 # this mkmagic is used in place, it is not installed anywhere
 install:
+
+.for inc in ${INCS}
+${inc}: ${inc}.in
+	sed -e 's,X.YY,${VER:S,",,g:S,.,,g},g' ${.ALLSRC} > ${.TARGET}
+.endfor
 
 .include <bsd.hostprog.mk>
