Update pxeboot - Synced with fbsd (freebsd/freebsd@433bd38) - Integrate support for tftp and nfs in one pxeloader   Remove need for loader_tftp and pxeldr_tftp as special versions   Update man pages accordingly - Use RB_SERIAL and RB_MULTIPLE (aka boot_multicons) from sys/reboot.h   when no keyboard was detected (potential false positive). - Fix nfs/tftp order for pxeboot

--- a/sys/boot/pc32/loader/Makefile
+++ b/sys/boot/pc32/loader/Makefile
@@ -18,7 +18,7 @@ INSTALLFLAGS=	-b
 SRCS=		main.c conf.c
 
 # Enable PXE TFTP or NFS support, not both.
-#CFLAGS+=	-DLOADER_TFTP_SUPPORT
+CFLAGS+=	-DLOADER_TFTP_SUPPORT
 CFLAGS+=	-DLOADER_NFS_SUPPORT
 
 # Enable PnP and ISA-PnP code.
