--- a/sys/boot/pc32/Makefile
+++ b/sys/boot/pc32/Makefile
@@ -7,9 +7,9 @@
 # must come before boot2
 SUBDIR=	asmdef btx btxld
 
-SUBDIR+=boot0 boot0sio boot2 cdboot libi386 loader loader_tftp mbr
+SUBDIR+=boot0 boot0sio boot2 cdboot libi386 loader mbr
 
 # special boot programs, 'self-extracting boot2+loader'
-SUBDIR+=pxeldr pxeldr_tftp
+SUBDIR+=pxeldr
 
 .include <bsd.subdir.mk>
