--- a/sys/boot/pc32/pxeldr/Makefile
+++ b/sys/boot/pc32/pxeldr/Makefile
@@ -34,6 +34,7 @@ BTXDIR=		${.CURDIR}/../btx
 BTXLDR=		${BTXDIR}/btxldr/btxldr
 BTXKERN=	${BTXDIR}/btx/btx
 BTXCRT=		${BTXDIR}/lib/crt0.o
+CFLAGS+=	-I../../..
 
 ${BOOT}: ${LDR} ${LOADER}
 	cat ${LDR} ${LOADER} > ${.TARGET}.tmp
