--- a/etc/rc.d/Makefile
+++ b/etc/rc.d/Makefile
@@ -8,18 +8,21 @@
 FILES=	DAEMON LOGIN NETWORKING SERVERS \
 	accounting addswap adjkerntz automount automountd autounmountd \
 	bootconf bootparams btconfig bthcid ccd cleanvar cryptdisks \
-	cleartmp cron cryptdisks devd devfs dhclient diskless dmesg dumpon \
+	cleartmp cron cryptdisks \
+	devd devfs dhclient diskless dmesg dntpd dumpon \
 	fixbootfile fsck ftpd hostname hotplugd \
-	inetd initdiskless initrandom ip6addrctl ip6fw ipfw ipfw3 jail keyserv \
+	inetd initdiskless initrandom ip6addrctl ip6fw ipfw ipfw3 \
+	jail keyserv \
 	ldconfig local localdaemons lockd lpd lvm \
 	mixer modules motd mountcritlocal mountcritremote \
 	mountd moused mroute6d mrouted msgs \
 	named netif netoptions newsyslog \
 	network_ipv6 nfsclient nfsd nfsserver nisdomain nscd nsswitch \
-	dntpd othermta pf pflog powerd ppp pppoed pwcheck \
+	othermta pf pflog powerd ppp pppoed pwcheck \
 	quota random rarpd rcconf resident rndcontrol root route6d routed \
 	routing rpcbind rtadvd rtsold rwho sysdb savecore sdpd securelevel \
-	sendmail sensorsd serial sppp sshd statd swap1 syscons sysctl syslogd sysvipcd \
+	sendmail sensorsd serial sppp sshd statd swap1 syscons \
+	sysctl syslogd sysvipcd \
 	timed ttys udevd udevd_early \
 	varsym vfs_quota vinum virecover vkernel vknetd \
 	watchdogd wpa_supplicant \
