mkinitrd(8): Integrate the default configurations
Integrate the default configurations in the tool itself, and thus remove
the config file (/etc/defaults/mkinitrd.conf).  This allows to build
RELEASE 5.2 on master, because the mkinitrd.conf has been removed and is
absent on a master system.

Reported-by: swildner

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3380,6 +3380,7 @@ TO_REMOVE+=/etc/periodic/daily/430.status-rwho
 TO_REMOVE+=/etc/mtree/BSD.local.dist
 TO_REMOVE+=/usr/share/man/man9/devfs_clone_bitmap_fff.9.gz
 TO_REMOVE+=/usr/share/man/man7/stabs.7.gz
+TO_REMOVE+=/etc/defaults/mkinitrd.conf
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
