fetch.9: Document fuwordadd{32,64}().

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -485,7 +485,9 @@ MLINKS+=EVENTHANDLER.9 EVENTHANDLER_DECLARE.9 \
 	EVENTHANDLER.9 eventhandler_register.9
 MLINKS+=fetch.9 fubyte.9 \
 	fetch.9 fuword32.9 \
-	fetch.9 fuword64.9
+	fetch.9 fuword64.9 \
+	fetch.9 fuwordadd32.9 \
+	fetch.9 fuwordadd64.9
 MLINKS+=firmware.9 firmware_get.9 \
 	firmware.9 firmware_put.9 \
 	firmware.9 firmware_register.9 \
