--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -326,10 +326,6 @@ _worldtmp: _cleantmp _mtreetmp
 .ORDER: _cleantmp _mtreetmp
 
 _cleantmp:
-	@echo
-	@echo "--------------------------------------------------------------"
-	@echo ">>> Rebuilding the temporary build tree"
-	@echo "--------------------------------------------------------------"
 .if !defined(NOCLEAN)
 	rm -rf ${BTOOLSDEST} ${CTOOLSDEST} ${WORLDDEST}
 .else
@@ -339,6 +335,10 @@ _cleantmp:
 .endif
 
 _mtreetmp:
+	@echo
+	@echo "--------------------------------------------------------------"
+	@echo ">>> Rebuilding the temporary build tree"
+	@echo "--------------------------------------------------------------"
 	mkdir -p ${DESTDIRBASE} ${BTOOLSDEST} ${CTOOLSDEST} ${WORLDDEST}
 .for _dir in ${WORLDDEST} ${BTOOLSDEST} ${CTOOLSDEST}
 	mtree -deU -f ${.CURDIR}/etc/mtree/BSD.root.dist	\
@@ -405,7 +405,7 @@ _depend:
 everything:
 	@echo
 	@echo "--------------------------------------------------------------"
-	@echo ">>> stage 4d: building everything.."
+	@echo ">>> stage 4d: building everything"
 	@echo "--------------------------------------------------------------"
 	cd ${.CURDIR}; ${WMAKE} all
 _initrd:
@@ -472,19 +472,39 @@ crossworld: _worldtmp _bootstrap-tools _obj _build-tools _cross-tools
 .ORDER: installcheck backupworld-auto
 .ORDER: everything _qwdone
 
-#
+
 # installcheck
 #
 # Checks to be sure system is ready for installworld
 #
 installcheck: _iwinit
-	@pw usershow _pflogd || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
-	@pw groupshow authpf || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
-	@pw groupshow _pflogd || (echo "You may need to run 'make preupgrade' first"; /usr/bin/false)
+.for _user in _pflogd
+	@pw usershow ${_user} >/dev/null || { \
+	    echo "You need to run 'make preupgrade' first."; \
+	    /usr/bin/false; \
+	}
+.endfor
+.for _group in _pflogd authpf
+	@pw groupshow ${_group} >/dev/null || { \
+	    echo "You need to run 'make preupgrade' first."; \
+	    /usr/bin/false; \
+	}
+.endfor
 .if !defined(OVERRIDE_CHECKS)
 .if !defined(DESTDIR) || ${DESTDIR} == "" || ${DESTDIR} == "/"
-	@case `uname -r` in 1.2*|1.3-*|1.3.*|1.4.*|1.5.0-*|1.5.1-*|1.5.2-*|1.5.3-*) echo "You must upgrade your kernel to at least 1.5.4 and reboot before you can safely installworld, due to libc/system call ABI changes" ; /usr/bin/false ; esac
-	@case `uname -r` in 1.*|2.*|3.0*|3.1*|3.2*|3.3*|3.4*|3.5*|3.6*) echo "Base is too old for a normal installworld, you need to use installworld-force" ; /usr/bin/false ; esac
+	@case `uname -r` in \
+	    1.2*|1.3-*|1.3.*|1.4.*|1.5.0-*|1.5.1-*|1.5.2-*|1.5.3-*) \
+		echo "You must upgrade your kernel to at least 1.5.4" \
+		     "and reboot before you can safely installworld," \
+		     "due to libc/system call ABI changes."; \
+		/usr/bin/false; \
+	esac
+	@case `uname -r` in \
+	    1.*|2.*|3.0*|3.1*|3.2*|3.3*|3.4*|3.5*|3.6*) \
+		echo "The system is too old for a normal installworld," \
+		     "you need to use 'installworld-force'."; \
+		/usr/bin/false; \
+	esac
 .endif
 .endif
 
@@ -513,13 +533,19 @@ installworld: installcheck
 installworld-force:
 	@echo "Doing a forced installworld.  This will install to a temporary directory,"
 	@echo "then copy the main binaries and libraries with a static cpdup to ${DESTDIR}/"
-	@echo "and finally will issue a normal installworld.  Starting in 5 seconds.".
-	@echo "^C to abort."
+	@echo "and finally will issue a normal installworld."
+	@echo
+	@echo "Starting in 5 seconds.  ^C to abort."
+	@echo
 	sleep 1
-	rm -rf /usr/obj/temp > /dev/null 2>& 1 || chflags -R noschg /usr/obj/temp
+	rm -rf /usr/obj/temp > /dev/null 2>&1 || chflags -R noschg /usr/obj/temp
 	rm -rf /usr/obj/temp
 	mkdir -p /usr/obj/temp/cpdup/bin
-	(cd ${.CURDIR}/bin/cpdup; make clean && make obj && make clean && make CFLAGS=-static all install DESTDIR=/usr/obj/temp/cpdup NOMAN=TRUE)
+	(cd ${.CURDIR}/bin/cpdup; \
+		make clean && \
+		make obj && \
+		make clean && \
+		make CFLAGS=-static all install DESTDIR=/usr/obj/temp/cpdup NOMAN=TRUE)
 	@echo "XXXXXXXXX Installing to temporary XXXXXXXXX"
 	@sleep 1
 	(cd ${.CURDIR}; ${MAKE} installworld DESTDIR=/usr/obj/temp > /dev/null 2>&1)
@@ -539,7 +565,6 @@ installworld-force:
 	(cd ${.CURDIR}; ${MAKE} upgrade OVERRIDE_CHECKS=TRUE)
 	(cd ${.CURDIR}; ${MAKE} initrd)
 
-#
 # reinstall
 #
 # If you have a build server, you can NFS mount the source and obj directories
@@ -553,7 +578,7 @@ reinstall:
 	cd ${.CURDIR}; make -f Makefile.inc1 hierarchy
 	@echo
 	@echo "--------------------------------------------------------------"
-	@echo ">>> Installing everything.."
+	@echo ">>> Installing everything"
 	@echo "--------------------------------------------------------------"
 	cd ${.CURDIR}; make -f Makefile.inc1 install
 
@@ -564,7 +589,7 @@ reinstall:
 initrd: .PHONY
 	(cd ${.CURDIR}/initrd; ${IMAKEENV} make install)
 
-#
+
 # buildkernel, nativekernel, quickkernel, realquickkernel, and installkernel
 #
 # Which kernels to build and/or install is specified by setting
@@ -620,7 +645,6 @@ KERNEL_VERSION_${_kernel} != cat ${KRNLOBJDIR}/${_kernel}/version
 .endif
 .endfor
 
-#
 # buildkernel
 #
 # Builds all kernels defined by BUILDKERNELS.
@@ -801,7 +825,7 @@ installkernel reinstallkernel:
 	@echo ">>> Kernel install for ${INSTALLKERNEL} completed on `LC_ALL=C date`"
 	@echo "--------------------------------------------------------------"
 
-#
+
 # ------------------------------------------------------------------------
 #
 # From here onwards are utility targets used by the 'make world' and
