build - Add security/wpa_supplicant to nrelease
* Add security/wpa_supplicant to the nrelease build.  This ensures
  that the latest wpa_supplicant is available on release.  The
  wpa_supplicant in the base system exists only to help bootstrap
  systems when the port is not installed.

--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -41,6 +41,7 @@ DPORTS_PACKAGES?=	devel/git \
 			dns/bind-tools \
 			net/isc-dhcp44-server \
 			sysutils/cdrtools \
+			security/wpa_supplicant \
 			${DPORTS_EXTRA_PACKAGES}
 
 # dports options to use when building packages
