initrd: Explicitly say the status when build completes
Before this change, the 'all' target that builds the rescue and initrd
will end with a '--- obj ---' line, which may cause an illusion that the
build hasn't finished.  Now, explicitly say that the build has finished.

Suggested-by: swildner

--- a/initrd/Makefile
+++ b/initrd/Makefile
@@ -21,6 +21,9 @@ all:
 	    ${INITRD_MAKE} obj; \
 	    ${INITRD_MAKE} depend all)
 .endfor
+	@echo "--------------------------------------------------------------"
+	@echo ">>> complete building rescue and initrd"
+	@echo "--------------------------------------------------------------"
 
 
 install:
