rc: Let dhcpcd(8) go to background immediately by default
Set the default value of "dhcpcd_flags" to be "-b", thus don't let
dhcpcd(8) block the boot, especially when there is no wireless
connection, with the default settings.

--- a/etc/defaults/rc.conf
+++ b/etc/defaults/rc.conf
@@ -60,7 +60,7 @@ dhcp_client="dhclient"		# Name of the rc script that is called to start
 				# the DHCP client, e.g., "dhcpcd" or "dhclient"
 dhcpcd_enable="NO"		# Set to YES to run dhcpcd in master mode.
 dhcpcd_program="/sbin/dhcpcd"
-dhcpcd_flags=""
+dhcpcd_flags="-b"
 dhclient_program="/sbin/dhclient"	# Path to dhcp client program.
 dhclient_flags="-w"		# Additional flags to pass to dhcp client.
 firewall_enable="NO"		# Set to YES to enable firewall functionality
