--- a/etc/devd/Makefile
+++ b/etc/devd/Makefile
@@ -1,6 +1,6 @@
 # $FreeBSD: head/etc/devd/Makefile 261894 2014-02-14 15:31:48Z avg $
 
-FILES=	uath.conf usb.conf
+FILES=	usb.conf
 
 .if ${MACHINE_ARCH} == "x86_64"
 FILES+=	asus.conf
