--- a/etc/devd.conf
+++ b/etc/devd.conf
@@ -23,8 +23,8 @@ options {
 		ida|iir|ips|isp|mlx|mly|mpr|mps|mpt|ncr|sym|trm)\
 		[0-9]+";
 	set wifi-driver-regex
-		"(ath|bwi|bwn|ipw|iwi|iwn|malo|mwl|ral|rsu|rum|run|uath|upgt|\
-		ural|urtw|urtwn|wi|wpi|wtap|zyd)[0-9]+";
+		"(ath|bwi|bwn|ipw|iwi|iwn|malo|mwl|ral|rsu|rum|run|\
+		urtw|urtwn|wi|wpi|wtap)[0-9]+";
 };
 
 # Note that the attach/detach with the highest value wins, so that one can
