--- a/sys/platform/vkernel64/conf/Makefile
+++ b/sys/platform/vkernel64/conf/Makefile
@@ -20,7 +20,7 @@ S=	../..
 # Additionally, the max-page-size is set to 0x200000 regardless of the ld
 # default setting.
 #
-SYSTEM_LD= @${CC} ${DEBUG} ${PROF} -Wl,--export-dynamic -o ${.TARGET} ${SYSTEM_OBJS} vers.o -pthread
+SYSTEM_LD= @${CC} ${DEBUG} -Wl,--export-dynamic -o ${.TARGET} ${SYSTEM_OBJS} vers.o -pthread
 SYSTEM_LD+= -Wl,--hash-style=sysv
 SYSTEM_LD+= -Wl,-z,max-page-size=0x200000
 
