kernel: Remove unused *.h files from SRCS in kernel module Makefiles. (2)
Forgot two Makefiles.

--- a/sys/bus/u4b/storage/umass/Makefile
+++ b/sys/bus/u4b/storage/umass/Makefile
@@ -1,7 +1,7 @@
 .PATH:	${.CURDIR}/..
 
 KMOD=	umass
-SRCS=	ata_if.h bus_if.h device_if.h usbdevs.h \
+SRCS=	bus_if.h device_if.h usbdevs.h \
 	opt_usb.h opt_cam.h \
 	umass.c
 
