--- a/sys/bus/u4b/storage/usfs/Makefile
+++ b/sys/bus/u4b/storage/usfs/Makefile
@@ -1,7 +1,7 @@
 .PATH:	${.CURDIR}/..
 
 KMOD=	usfs
-SRCS=	ata_if.h bus_if.h device_if.h usb_if.h usbdevs.h \
+SRCS=	bus_if.h device_if.h usb_if.h usbdevs.h \
 	opt_usb.h \
 	ustorage_fs.c
 
